--- a/reviewed.html
+++ b/reviewed.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
   </head>
   <body>
-    <script src="script.js"></script>
     <!-- Header -->
     <div id="nav">
       <div id="nav_wrapper">
@@ -16,29 +15,28 @@
           <li><a href="browse.html" style="font-weight: 600;">Browse Category</a>
             <ul style="z-index: 5;">
               <li><a href="classic.html">Classics</a></li>
-              <li><a href="comic.html">Comics</a></li>
               <li><a href="fantasy.html">Fantasy</a></li>
               <li><a href="fic.html">Fiction</a></li>
-              <li><a href="novel.html">Graphic Novels</a></li>
+              <li><a href="novel.html">Graphic Novels/Comics</a></li>
               <li><a href="horror.html">Horror</a></li>
               <li><a href="mystery.html">Mystery</a></li>
               <li><a href="romance.html">Romance</a></li>
               <li><a href="sci-fi.html">Science Fiction</a></li>
-              <li><a href="sports.html">Sports</a></li>
               <li><a href="thriller.html">Thriller</a></li>
               <li><a href="ya.html">Young Adult</a></li>
             </ul></li><li>
           <a href="recom.html" style="font-weight: 600;">Your Recommendations</a></li><li>
-          <a href="" style="width: 865px!important;" class="no_hover"></a></li><li>
+          <a href="" style="width: 860px!important;" class="no_hover"></a></li><li>
           <a href="index.html" class="logo" style="font-weight: 600;">Book<span style="color: #6E81C1">Strap</span></a></li>
         </ul>
       </div>
     </div>
-
+    <!-- Header Text -->
     <div style="text-align: center!important; justify-content: space-evenly!important;">
       <h1 class="h1 topager" style="font-size: 30px!important; border-style: none!important;">Best Reviewed</h1>
     </div>
     <!-- Books Container -->
+      <!-- The Name of the Wind -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -46,7 +44,7 @@
               <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Ffce5f617-81e3-4470-9f4b-650e74c245b6.image.png?v=1595274265265"/>
             </div>
             <div class="flip-card-text">
-              <h2 class="title">The Name of the Wind</h2>
+              <h2>The Name of the Wind</h2>
               <p class="title">The Kingkiller Chronicle #1</p>
             </div>
           </div>
@@ -55,12 +53,13 @@
               <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F530812bf-028f-44c1-a218-61b63d5210f0.image.png?v=1595274345690"/>
             </div>
             <div class="flip-card-text">
-              <a href="books/thenameofthewind.html">The Name of the Wind</a></h2>
-              <p>Fantasy</p>
+              <h2 class="title"><a href="books/thenameofthewind.html">The Name of the Wind</a></h2>
+              <p class="genre"><a href="fantasy.html">Fantasy</a></p>
             </div>
           </div>
         </div>
       </div>
+      <!-- Shout -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -77,12 +76,13 @@
               <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F3e820720-202e-44d4-abe7-1ccc783f6ae6.image.png?v=1595274535581"/>
             </div>
             <div class="flip-card-text">
-              <a href="books/shout.html">Shout</a></h2>
-              <p>Unknown</p>
+              <h2 class="title"><a href="books/shout.html">Shout</a></h2>
+              <p class="genre"><a href="mystery.html">Mystery</a></p>
             </div>
           </div>
         </div>
       </div>
+      <!-- The Testaments -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -90,44 +90,45 @@
               <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fed6e080c-16d1-4caf-82d3-3c36c43881ff.image.png?v=1595274803820"/>
             </div>
             <div class="flip-card-text">
-              <h2 class="title"><a href="books/thetestaments.html">The Testaments</a></h2>
+              <h2>The Testaments</h2>
               <p class="title">2019 Booker Prize Winner</p>
             </div>
           </div>
           <div class="flip-card-back">
             <div class="flip-card-img">
-              <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F37383804-cd19-428d-aed8-cb025ef6b893.image.png?v=1595274904930" />
+              <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F37383804-cd19-428d-aed8-cb025ef6b893.image.png?v=1595274904930"/>
             </div>
             <div class="flip-card-text">
-              <a href="books/thetestaments.html">The Testaments</a></h2>
-              <p>Sci-fi</p>
+              <h2 class="title"><a href="books/thetestaments.html">The Testaments</a></h2>
+              <p class="genre"><a href="sci-fi.html">Science Fiction</a></p>
             </div>
           </div>
         </div>
       </div>
+      <!-- The Institute -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <div class="flip-card-img">
-              <img  src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F649bc535-b212-4176-8ae1-025fe4be5389.image.png?v=1595275620767"/>
+              <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F649bc535-b212-4176-8ae1-025fe4be5389.image.png?v=1595275620767"/>
             </div>
             <div class="flip-card-text">
-              <h2 class="title"><a href="books/recursion.html">Recursion</a></h2>
+              <h2>The Institute</h2>
               <p class="title">Audie Award for Thriller and Suspense</p>
             </div>
           </div>
           <div class="flip-card-back">
             <div class="flip-card-img">
-              <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fb42aa779-ffe0-4b5d-9c80-5a427d6896df.image.png?v=1595275610531" />
+              <img src="https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fb42aa779-ffe0-4b5d-9c80-5a427d6896df.image.png?v=1595275610531"/>
             </div>
             <div class="flip-card-text">
-              <h2 class="title"><a href="books/recursion.html">Recursion</a></h2>
-              <p>Horror, Sci-fi, Thriller</p>
+              <h2 class="title"><a href="books/theinstitute.html">The Institute</a></h2>
+              <p class="genre"><a href="horror.html">Horror</a>, <a href="sci-fi.html">Science Fiction</a>, <a href="thriller.html">Thriller</a></p>
             </div>
           </div>
         </div>
       </div>
-      <!--The Wicked King-->
+      <!-- The Wicked King-->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -150,7 +151,7 @@
           </div>
         </div>
       </div>
-      <!--The Silent Patient-->
+      <!-- The Silent Patient -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -173,7 +174,7 @@
           </div>
         </div>
       </div>
-      <!--Recursion-->
+      <!-- Recursion -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -196,7 +197,7 @@
           </div>
         </div>
       </div>
-      <!--The Tyrant's Tomb-->
+      <!-- The Tyrant's Tomb -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -219,7 +220,7 @@
           </div>
         </div>
       </div>
-      <!--Pumpkinheads-->
+      <!-- Pumpkinheads -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -242,7 +243,7 @@
           </div>
         </div>
       </div>
-      <!--Fifty Shades of Grey-->
+      <!-- Daisy Jones & The Six -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -260,12 +261,12 @@
             </div>
             <div class="flip-card-text">
               <h2 class="title"><a href="books/daisyjonesandthesix.html">Daisy Jones & The Six</a></h2>
-              <p class="genre">Romance, Historical Fiction<a href="romance.html">Romance</a></p>
+              <p class="genre"><a href="fic.html">Fiction</a>, <a href="romance.html">Romance</a></p>
             </div>
           </div>
         </div>
       </div>
-      <!--The Heartbreakers-->
+      <!-- The Heartbreakers -->
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
