--- a/books/chosenones.html
+++ b/books/chosenones.html
@@ -46,7 +46,7 @@
         </div>
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;">PUT HREFS</h3><a class="linky" href="../.html"></a></h3>
+          <h3 style="padding-left: 80px;">PUT HREFS</h3><a class="linky" href="../fantasy.html"></a>Fantasy</h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../thriller.html">Thriller</a>
