--- a/books/thehobbit.html
+++ b/books/thehobbit.html
@@ -39,7 +39,7 @@
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
-          <h2>Title</h2>
+          <h2>The Hobbit</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Author
           </h3>
