--- a/books/thehobbit.html
+++ b/books/thehobbit.html
@@ -34,19 +34,19 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('LINK');">
+      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/91b0C2YNSrL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
           <h2>The Hobbit</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by Author
+            by J.R.R. Tolken
           </h3>
         </div>
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;">PUT HREFS</h3>
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a></h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../thriller.html">Thriller</a>
